# jss_cp

./: CMakeLists.txt  data_manager.cpp  data_manager.h  main.cpp  solution_sequence.cpp  solution_sequence.h
data/: filename.txt
data/abzswvyn/: swv01.txt  swv03.txt  swv04.txt  swv05.txt  swv06.txt  swv07.txt  swv08.txt  swv12.txt  swv13.txt  swv14.txt  swv15.txt  yn01.txt  yn02.txt  yn03.txt
data/rc/: swv09.txt  yn04.txt
data/tai3_3/: tai3_3_0.txt  tai3_3_1.txt
solution-sequence/: dmu01_rcmax_20_15_4.txt
